--- a/index.html
+++ b/index.html
@@ -60,6 +60,21 @@
 .portrait.win-glow{ box-shadow:0 0 0 0 rgba(34,197,94,.6); animation:ring 2.4s ease-out 1; }
 @keyframes ring{ 0%{box-shadow:0 0 0 0 rgba(34,197,94,.7)} 60%{box-shadow:0 0 0 14px rgba(34,197,94,0)} 100%{box-shadow:0 0 0 0 rgba(34,197,94,0)} }
 
+/* Emoji confetti pieces */
+.confetti{
+  position:fixed;
+  left:0; top:0; width:100vw; height:100vh;
+  pointer-events:none; z-index:70; overflow:hidden;
+}
+.confetti span{
+  position:absolute; font-size:20px; will-change:transform,opacity;
+  animation: fall 1800ms ease-out forwards;
+}
+@keyframes fall{
+  0%{ transform: translate(var(--x,0), calc(var(--y,0) - 20px)) scale(1.2) rotate(0deg); opacity:1; }
+  100%{ transform: translate(var(--x,0), calc(var(--y,0) - 120px)) scale(1) rotate(25deg); opacity:0; }
+}
+
 </style>
 </head>
 <body>
