--- a/leaderboard.html
+++ b/leaderboard.html
@@ -124,12 +124,20 @@ async function loadLeaderboard(scope){
   meta.textContent = `Mode: Daily • ${type} • seed ${seed}` + (scope==="country" && myCountry ? ` • ${myCountry}` : "");
   
   let query = supabase.from("games")
-    .select("tries, ms_elapsed, users:users!inner(handle, country)")
-    .eq("game_type", type).eq("run_mode", "daily").eq("seed", seed).eq("won", true)
-    .order("tries", { ascending: true }).order("ms_elapsed", { ascending: true }).limit(100);
+  .select("tries, ms_elapsed, users (handle, country)")
+  .eq("game_type", type)
+  .eq("run_mode", "daily")
+  .eq("seed", seed)
+  .eq("won", true)
+  .not("ms_elapsed", "is", null)   // <- only show rows that recorded time
+  .order("tries", { ascending: true })
+  .order("ms_elapsed", { ascending: true })
+  .limit(100);
 
-  if (scope === "country" && myCountry) {
-    query = query.eq("users.country", myCountry);
+if (scope === "country" && myCountry) {
+  query = query.eq("users.country", myCountry);
+}
+
   }
   const { data, error } = await query;
   if (error) { console.error(error); setRows([]); return; }
